--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
  <header>
-    <h1>Todo PWA</h1>
+    <h1>morlu Todo PWA</h1>
     <form id="new-task-form">
      <input type="text" name="new-task-input" id="new-task-input" placeholder="What do you have planned?" />
       <input type="submit" id="new-task-submit" value="Add task" />
